--- a/paginas/animações.html
+++ b/paginas/animações.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/icones/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../estilos/animastyle.css">
     <title>Amarelo Piscante</title>
 </head>
 <body>
+    <div>
+        <h1>
+            em costrução
+        </h1>
+    </div>
     
 </body>
 </html>
