--- a/paginas/pesquisas.html
+++ b/paginas/pesquisas.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/icones/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../estilos/pesquisastyle.css">
     <title>amarelo | amarelo</title>
 </head>
 <body>
-    
+    <div>
+        <h1>
+            em construção
+        </h1>
+    </div>
 </body>
 </html>
